--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,11 @@
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>net.ownhero.dev</groupId>
+			<artifactId>moreregex</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.3</version>
@@ -253,6 +258,11 @@
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-parsers</artifactId>
 			<version>0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>jregex</groupId>
+			<artifactId>jregex</artifactId>
+			<version>1.2_01</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.jponge</groupId>
