--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
 		<dependency>
 			<groupId>net.ownhero.dev</groupId>
 			<artifactId>kanuni</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.ownhero.dev</groupId>
@@ -200,7 +200,7 @@
 		<dependency>
 			<groupId>net.ownhero.dev</groupId>
 			<artifactId>moreregex</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
