--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,12 @@
 	</pluginRepositories>
 	<dependencies>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>net.ownhero.dev</groupId>
 			<artifactId>kanuni</artifactId>
 			<version>0.2-SNAPSHOT</version>
