--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>net.ownhero.dev</groupId>
 	<artifactId>ioda</artifactId>
 	<name>ioda</name>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.1.1</version>
 	<description>ioda is a library that provides support to create documents that can be rendered to plain-text, html, terminal, xml</description>
 	<url>http://www.st.cs.uni-saarland.de/</url>
 	<inceptionYear>2010</inceptionYear>
