--- a/pom.xml
+++ b/pom.xml
@@ -122,34 +122,34 @@
 		<repository>
 			<id>own-hero.net-public</id>
 			<name>own-hero.net Public Repositories</name>
-			<url>https://mozkito.org:8080/nexus/content/groups/public</url>
+			<url>http://mozkito.org:8080/nexus/content/groups/public</url>
 		</repository>
 		<repository>
 			<id>own-hero.net-private</id>
 			<name>own-hero.net Private Repositories</name>
-			<url>https://mozkito.org:8080/nexus/content/groups/private</url>
+			<url>http://mozkito.org:8080/nexus/content/groups/private</url>
 		</repository>
 		<repository>
 			<id>own-hero.net-proxy</id>
 			<name>own-hero.net Proxy Repositories</name>
-			<url>https://mozkito.org:8080/nexus/content/groups/proxy</url>
+			<url>http://mozkito.org:8080/nexus/content/groups/proxy</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>own-hero.net-public</id>
 			<name>own-hero.net Public Repositories</name>
-			<url>https://mozkito.org:8080/nexus/content/groups/public</url>
+			<url>http://mozkito.org:8080/nexus/content/groups/public</url>
 		</pluginRepository>
 			<pluginRepository>
 			<id>own-hero.net-private</id>
 			<name>own-hero.net Private Repositories</name>
-			<url>https://mozkito.org:8080/nexus/content/groups/private</url>
+			<url>http://mozkito.org:8080/nexus/content/groups/private</url>
 		</pluginRepository>
 		<pluginRepository>
 			<id>own-hero.net-proxy</id>
 			<name>own-hero.net Proxy Repositories</name>
-			<url>https://mozkito.org:8080/nexus/content/groups/proxy</url>
+			<url>http://mozkito.org:8080/nexus/content/groups/proxy</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<dependencies>
@@ -178,11 +178,6 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-compress</artifactId>
-			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
